# innovative_perfume_ai

./: .env  .env.dev  .env.example  .env.prod  .env.production.template  .gitignore  .gitmessage  ADVANCED_AI_ARCHITECTURE.md  AUTOSCALING_RULES.md  CANARY_DEPLOYMENT_SUMMARY.md  CLAUDE.md  CLEANUP_PLAN.md  COMMIT_GUIDELINES.md  COMMIT_HISTORY.md  DEPENDENCY_PACKAGING_DEPLOYMENT_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INFRASTRUCTURE_SUMMARY.md  DEVELOPMENT_LOG.md  DEVELOPMENT_STATUS.md  Dockerfile  Dockerfile.cloud  Dockerfile.production  GO_NOGO_GATE_DOCUMENTATION.md  GO_NOGO_GATE_GUIDE.md  GO_NOGO_GATE_SUMMARY.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_RECORD.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_TEST_COMPLETE.md  LICENSE  LLM_ENSEMBLE_OPERATION_TESTS.md  LLM_ENSEMBLE_SUMMARY.md  LLM_ENSEMBLE_VERIFICATION_SUMMARY.md  MIXED_TRAFFIC_TUNING_GUIDE.md  MODEL_OPERATIONS_GUIDE.md  MODEL_PERSISTENCE_COMPLETE.md  MONITORING_AND_AUTOMATION_GUIDE.md  Makefile  (+144 more)
.claude/: settings.local.json
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  pull_request_template.md
app/: main.py
assets/: comprehensive_fragrance_notes_database.json  perfume_blending_rules.json
commerce/: CLAUDE.md  FRONTEND_ERROR_HANDLING_UPDATE.md  PROJECT_GUIDE.md  clear-data.js  package-lock.json  package.json
config/: config-production.json
configs/: development.json  environment_config.py  feature_flags_dev.json  llm_ensemble.yaml  local.json  optimizer_examples.json  production.json  recommended_params.yaml  rl_config.yaml
data/: data_loader.py  (+17 more)
(+468 files in other folders)
