[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fragrance-ai"
version = "0.1.0"
description = "AI-powered fragrance recipe generation and semantic search system"
authors = [{name = "Fragrance AI Team"}]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "torch>=2.1.0",
    "transformers>=4.35.2",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.18",
    "pandas>=2.1.3",
    "numpy>=1.24.4",
]
requires-python = ">=3.9"

[project.scripts]
fragrance-ai = "fragrance_ai.main:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]